<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/tab_notification"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notification" />
    <item
        android:id="@+id/tab_add"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/add" />
    <item
        android:id="@+id/tab_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/tab_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />
</menu>